@@ -18,7 +18,10 @@ dependencies {
 }
 
 test {
-    jvmArgs '--add-exports=java.base/sun.security.util=ALL-UNNAMED'
+    jvmArgs(
+        '--add-exports=java.base/sun.security.util=ALL-UNNAMED',
+        '--add-opens=java.base/java.io=ALL-UNNAMED'
+    )
 }
 
 graalvmNative {
